@@ -1,15 +1,11 @@
 /*****************************************************************************\
- *  $Id: cerebrod.h,v 1.3 2005-03-14 22:05:55 achu Exp $
+ *  $Id: cerebrod.h,v 1.4 2005-03-17 22:59:27 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBROD_H
 #define _CEREBROD_H
 
-#include <sys/param.h>
-
-#ifndef MAXHOSTNAMELEN
-#define MAXHOSTNAMELEN 64
-#endif
+#define CEREBROD_MAXHOSTNAMELEN 64
 
 #define CEREBROD_PARSE_BUFLEN   4096
 #define CEREBROD_PACKET_BUFLEN  1024
