@@ -75,6 +75,15 @@
 	src/cerebrod/cerebrod_clusterlist_gendersllnl.c: Rework to use
 	common functions in
 	src/cerebrod/cerebrod_clusterlist_genders_util.c.
+
+	* src/libcommon/wrappers.c (wrap_gethostname): Guarantee
+	truncation.
+
+	* src/cerebrod/cerebrod_cache.c (_cerebrod_cache_hostname): No
+	truncation needed anymore.
+
+	* src/cerebrod: Globally change MAXHOSTNAMELEN to
+	CEREBROD_MAXHOSTNAMELEN.  Don't depend on sys/param.h.
 		
 2005-03-16  Albert Chu  <chu11@llnl.gov>
 
